# minerva-cs164

./: .gitignore  .pre-commit-config.yaml  README.md  clean.sh  pyproject.toml  requirements.txt  ruff.toml  setup.sh
examples/: lmi_hooke.py  newton_lec.py
notebooks/: CS164 Assignment 1.ipynb  CS164 Assignment 2.ipynb  CS164_Final.ipynb
scripts/: convert-md.sh
src/: utils.py
src/constrained_op/: linear_regression.py
src/unconstrained_op/: descent.py  local_min.py  minimize.py  step_size.py
