[project]
name = "cs164-optimization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "cvxpy>=1.6.0",
  "numpy>=2.0.2",
  "matplotlib>=3.9.2",
  "autograd>=1.7.0",
  "ruff>=0.7.0",
  "scipy>=1.13.0",
]

# optional dependencies
[project.optional-dependencies]
tex   = ["latexminted"]
ipynb = ["ipykernel"]
